# Churro

./: .example.env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  REPO_WORKFLOWS.md  benchmark_results.json  benchmark_vlm.py  churro_transformers_infer.py  conftest.py  pdf_dir_to_images.py  pixi.toml  pyproject.toml  pytest.ini  ruff.toml  run_churro_ocr.py  sitecustomize.py  ty.toml  workdir
.github/: copilot-instructions.md
.github/workflows/: docs.yml  publish.yml
churro/: .example.env  .gitignore  README.md  args.py  conftest.py  pixi.toml
churro/cli/: __init__.py  helpers.py
churro/evaluation/: __init__.py  evaluate_page.py  historical_doc.xsd  metrics.py  normalization.py
churro/page_boundary/: _constants.py  _models.py  _serialization.py
churro/systems/: azure_ocr.py  finetuned_ocr.py  llm_improver.py  mistral_ocr.py
churro/tests/: test_cli_benchmark_unit.py  test_cli_end_to_end.py  test_detect_layout_cache.py  test_evaluation_metrics_unit.py  test_evaluation_normalization_unit.py  test_llm_ocr.py
churro/utils/: __init__.py  concurrency.py
churro/utils/docker/: container.py  errors.py  servers.py
churro/utils/image/: transform.py
churro/utils/llm/: __init__.py  config.py  core.py  shutdown.py  utils.py
churro/utils/pdf/: pdfs_to_images.py
cli/: __main__.py  benchmark.py  docs_to_images.py  infer.py  main.py  text_to_historical_doc_xml.py
config/: __init__.py  settings.py
docs/: benchmarking.md  cli.md  conf.py  contributing.md  core-concepts.md  getting-started.md  index.md  leaderboard.md  pypi.md
docs/_static/css/: custom.css
docs/_static/js/: benchmark-leaderboard.js
docs/_templates/: sidebar-nav-full.html  sidebar-toggle.html
docs/_templates/sections/: sidebar-primary.html
docs/api/: churro_ocr.md  document.md  index.md  ocr.md  page_detection.md  prompts.md  providers.md  templates.md
docs/guides/: advanced-customization.md  historical-document-xml.md  ocr-workflows.md  page-detection.md  providers.md
evaluation/: evaluate_page.py  metrics.py  repetition.py  xml_utils.py
ocr/: args.py
ocr/systems/: __init__.py  azure_ocr.py  base_ocr.py  detect_layout.py  finetuned_ocr.py  hybrid_pipeline_ocr.py  llm_improver.py  llm_ocr.py  mistral_ocr.py  ocr_factory.py
page/: __init__.py  bounding_box_element.py  image_utils.py  page.py  page_object.py  polygon.py  visualization.py
page_boundary/: __init__.py  _image_processing.py  _pipeline.py  cli.py  detector.py
scripts/: package_check.py
src/churro_ocr/: __init__.py  __main__.py  cli.py  document.py  errors.py  ocr.py  page_detection.py  types.py
src/churro_ocr/_internal/: __init__.py  image.py  install.py  litellm.py  logging.py  pdf.py  prompt_logging.py  retry.py  runtime.py
src/churro_ocr/prompts/: __init__.py  layout.py  ocr.py
src/churro_ocr/providers/: __init__.py  _hf_dots.py  _hf_helpers.py  _hf_mineru.py  _hf_runtime.py  _mineru25.py  _ocr_processing.py  _page_detection_helpers.py  _page_detection_review.py  _shared.py  builder.py  hf.py  ocr.py  page_detection.py  specs.py  vllm.py
src/churro_ocr/templates/: __init__.py  base.py  hf.py  presets.py
systems/: __init__.py  base_ocr.py  detect_layout.py  llm_ocr.py  ocr_factory.py
tests/: _types.py  conftest.py  test_args_module.py  test_cli.py  test_cli_benchmark_unit.py  test_cli_contract.py  test_cli_infer_unit.py  test_document_pipeline.py  test_hf_ocr.py  test_hf_ocr_integration.py  test_hybrid_pipeline_ocr.py  test_install.py  test_internal_helpers.py  test_layout_api.py  test_llm_async.py  test_logging.py  test_model_map.py  test_ocr_api.py  test_package_check.py  test_page_detection_integration.py  test_page_detection_provider_helpers.py  test_parallel_executor.py  test_pdf_pipeline.py  test_pdf_pipeline_integration.py  test_process_one_pdf_file.py  test_provider_api_contracts.py  test_providers.py  test_public_api_contracts.py  test_settings.py  test_simple_pipeline_ocr.py  test_tooling_benchmark.py  test_tooling_evaluate_page.py  test_tooling_metrics.py  test_tooling_support.py  test_vllm_config.py
tooling/: __init__.py
tooling/benchmarking/: __init__.py  benchmark.py  dataset.py
tooling/evaluation/: __init__.py  evaluate_page.py  metrics.py  normalization.py  repetition.py  types.py  xml_utils.py
utils/: log_utils.py  utils.py
utils/docker/: __init__.py  container.py  logging_utils.py  operations.py  sdk.py  servers.py  vllm.py
utils/image/: binarizer.py  io.py  transform.py
utils/llm/: __init__.py  config.py  core.py  cost.py  embeddings.py  messages.py  models.py  shutdown.py  types.py  utils.py
utils/pdf/: __init__.py  pdfs_to_images.py  runner.py
