[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "churro-ocr"
version = "0.1.0"
description = "Library-first OCR and layout detection for historical documents"
readme = { file = "docs/pypi.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "History Genie" }]
keywords = ["ocr", "layout-detection", "historical-documents", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.2,<1",
    "Pillow>=10.4.0,<12",
    "rich>=13.9.2,<14",
    "typer>=0.12.3,<1",
]

[project.optional-dependencies]
llm = [
    "google-auth>=2.41.1,<3",
    "litellm[caching]==1.82.3",
]
azure = [
    "azure-ai-documentintelligence==1.0.2",
]
hf = [
    "qwen-vl-utils",
    "transformers[torch]>=4.57.0,<5",
    "torchvision",
]
vllm = [
    "transformers>=4.57.0,<5",
    "torchvision",
    "vllm>=0.18,<1",
]
mistral = [
    "mistralai>=1.6.0,<2",
]
local = [
    "litellm[caching]==1.82.3",
]
pdf = [
    "pypdfium2>=5,<6",
]
all = [
    "google-auth>=2.41.1,<3",
    "litellm[caching]==1.82.3",
    "azure-ai-documentintelligence==1.0.2",
    "qwen-vl-utils",
    "transformers[torch]>=4.57.0,<5",
    "torchvision",
    "vllm>=0.18,<1",
    "mistralai>=1.6.0,<2",
    "pypdfium2>=5,<6",
]

[dependency-groups]
dev-docs = [
    "myst-parser>=4.0.1,<5",
    "pydata-sphinx-theme>=0.16.1,<1",
    "sphinx>=8.2.3,<9",
    "sphinx-autobuild>=2024.10.3,<2026",
    "sphinx-copybutton>=0.5.2,<1",
    "sphinx-design>=0.6.1,<1",
]
dev-eval = [
    "datasets>=4.4.1,<5",
    "evaluate>=0.4.6,<0.5",
    "google-auth>=2.41.1,<3",
    "nltk>=3.9.2,<4",
    "pyarabic>=0.6.15,<0.7",
    "rapidfuzz>=3.14.3,<4",
    "tqdm>=4.67.1,<5",
]
dev-test = [
    "coverage>=7.11.0,<8",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.0.0,<8",
]
dev-tooling = [
    "build",
    "pre-commit>=4,<5",
    "ruff",
    "twine",
    "ty>=0.0.28,<0.0.29",
]
dev = [
    { include-group = "dev-docs" },
    { include-group = "dev-eval" },
    { include-group = "dev-test" },
    { include-group = "dev-tooling" },
]

[project.scripts]
churro-ocr = "churro_ocr.cli:main"

[project.urls]
Homepage = "https://github.com/stanford-oval/Churro"
Documentation = "https://stanford-oval.github.io/Churro/"
Repository = "https://github.com/stanford-oval/Churro"
Issues = "https://github.com/stanford-oval/Churro/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["churro_ocr*"]

[tool.setuptools.package-data]
"churro_ocr" = ["py.typed"]

[tool.pixi.workspace]
channels = ["conda-forge", "main", "r", "msys2"]
name = "churro-ocr"
platforms = ["linux-64"]

[tool.pixi.dependencies]
pip = "*"

[tool.pixi.feature.repo-default.pypi-dependencies]
"churro-ocr" = { path = ".", editable = true, extras = ["llm", "azure", "hf", "mistral", "pdf"] }

[tool.pixi.feature.repo-minimal.pypi-dependencies]
"churro-ocr" = { path = ".", editable = true, extras = ["hf"] }

[tool.pixi.feature.cuda.dependencies]
cudnn = "9.*"
cuda-libraries = "12.*"

[tool.pixi.environments]
default = { features = ["repo-default", "dev"], solve-group = "default" }
minimal = { features = ["dev", "repo-minimal"], solve-group = "default" }
cuda = { features = ["repo-default", "cuda", "dev"], solve-group = "default" }

[tool.pixi.tasks]
format = "ruff format src tests"
lint = "ruff check src tests"
typecheck = "ty check src tests"
test = "python -m pytest"
coverage = "python -m pytest --cov=src/churro_ocr --cov=tooling --cov-report=term-missing"
docs-build = "python -m sphinx -W --keep-going -b html docs docs/_build/html"
docs-serve = "python -m sphinx_autobuild --port 0 docs docs/_build/html"
package-check = "python scripts/package_check.py"
